HUB-400 and HUB-404: IE11 fix to avoid overflowing news and theme titles.

--- a/themes/uhsg_theme/sass/components/_box_story.scss
+++ b/themes/uhsg_theme/sass/components/_box_story.scss
@@ -8,3 +8,10 @@
   border-bottom: 1px solid #f8f8f8;
   padding: 1em 0 .5em;
 }
+
+// IE11: Define width to avoid overflowing titles.
+.box-story__title {
+  span {
+    width: 100%;
+  }
+}
