--- a/themes/uhsg_theme/sass/components/_theme.scss
+++ b/themes/uhsg_theme/sass/components/_theme.scss
@@ -17,6 +17,8 @@
     letter-spacing: -0.05em;
     line-height: 1.2em;
     font-weight: 700;
+    // IE11: Define width to avoid overflowing titles.
+    width: 100%;
   }
 
   .theme__link-wrapper {
@@ -64,6 +66,8 @@
     text-transform: uppercase;
     line-height: 1.2em;
     font-weight: 700;
+    // IE11: Define width to avoid overflowing titles.
+    width: 100%;
   }
 
   .theme__link-wrapper {
